--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>Periodic Table</h1>
-
+<app-filter-input (filterChange)="onFilterChange($event)"></app-filter-input>
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   <!-- Number Column -->
   <ng-container matColumnDef="position">
@@ -25,6 +25,12 @@
     <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
   </ng-container>
 
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef>Actions</th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-button (click)="openEditDialog(element)">Edit</button>
+    </td>
+  </ng-container>
   <!-- Header and Row Declarations -->
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
