--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,3 +5,10 @@ table {
 h1 {
   text-align: center;
 }
+
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+}
