--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,4 +44,5 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
+  <app-periodic-table></app-periodic-table>
 </ng-template>
