--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,49 +2,76 @@
 
 <app-filter-input (filterChange)="onFilterChange($event)"></app-filter-input>
 
-<div *ngIf="isLoading; else tableTemplate" class="spinner-container">
+<div *ngIf="loading$ | async; else tableTemplate" class="spinner-container">
   <mat-spinner></mat-spinner>
 </div>
 
 <ng-template #tableTemplate>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-    <!-- Number Column -->
-    <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef>Number</th>
-      <td mat-cell *matCellDef="let element">{{ element.position }}</td>
-    </ng-container>
+  <ng-container *ngIf="elements$ | async as elements">
+    <table mat-table [dataSource]="elements" class="mat-elevation-z8">
+      <!-- Number Column -->
+      <ng-container matColumnDef="position">
+        <th mat-header-cell *matHeaderCellDef>Number</th>
+        <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+      </ng-container>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-    </ng-container>
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      </ng-container>
 
-    <!-- Weight Column -->
-    <ng-container matColumnDef="weight">
-      <th mat-header-cell *matHeaderCellDef>Weight</th>
-      <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
-    </ng-container>
+      <!-- Weight Column -->
+      <ng-container matColumnDef="weight">
+        <th mat-header-cell *matHeaderCellDef>Weight</th>
+        <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+      </ng-container>
 
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="symbol">
-      <th mat-header-cell *matHeaderCellDef>Symbol</th>
-      <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
-    </ng-container>
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="symbol">
+        <th mat-header-cell *matHeaderCellDef>Symbol</th>
+        <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+      </ng-container>
 
-    <!-- Actions Column -->
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef>Actions</th>
-      <td mat-cell *matCellDef="let element">
-        <button mat-button (click)="openEditDialog(element)">Edit</button>
-      </td>
-    </ng-container>
+      <!-- Actions Column -->
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef>Actions</th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-button (click)="openEditDialog(element)">Edit</button>
+        </td>
+      </ng-container>
 
-    <!-- Header and Row Declarations -->
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
+      <!-- Header and Row Declarations -->
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </ng-container>
+  <!-- Grid na mobile -->
+  <mat-grid-list
+    cols="1"
+    rowHeight="200px"
+    gutterSize="8px"
+    class="mobile-grid"
+  >
+    <mat-grid-tile
+      *ngFor="let element of elements$ | async"
+      [style.background]="getCategoryColor(element.category)"
+      class="element-tile"
+    >
+      <div class="tile-content">
+        <div class="number">{{ element.position }}</div>
+        <div class="symbol">{{ element.symbol }}</div>
+        <div class="name">{{ element.name }}</div>
+        <div class="weight">{{ element.weight }}</div>
+        <button mat-button color="primary" (click)="openEditDialog(element)">
+          Edytuj
+        </button>
+      </div>
+    </mat-grid-tile>
+  </mat-grid-list>
+
   <app-periodic-table></app-periodic-table>
+
   <h2>Model atomu sodu (Na)</h2>
   <app-atom [shells]="[2, 8, 1]"></app-atom>
 
