--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,33 +7,28 @@
 </div>
 
 <ng-template #tableTemplate>
-  <ng-container *ngIf="elements$ | async as elements">
-    <table mat-table [dataSource]="elements" class="mat-elevation-z8">
-      <!-- Number Column -->
+  <ng-container *ngIf="pagedElements$ | async as pagedElements">
+    <table mat-table [dataSource]="pagedElements" class="mat-elevation-z8">
       <ng-container matColumnDef="position">
         <th mat-header-cell *matHeaderCellDef>Number</th>
         <td mat-cell *matCellDef="let element">{{ element.position }}</td>
       </ng-container>
 
-      <!-- Name Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Name</th>
         <td mat-cell *matCellDef="let element">{{ element.name }}</td>
       </ng-container>
 
-      <!-- Weight Column -->
       <ng-container matColumnDef="weight">
         <th mat-header-cell *matHeaderCellDef>Weight</th>
         <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
       </ng-container>
 
-      <!-- Symbol Column -->
       <ng-container matColumnDef="symbol">
         <th mat-header-cell *matHeaderCellDef>Symbol</th>
         <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
       </ng-container>
 
-      <!-- Actions Column -->
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Actions</th>
         <td mat-cell *matCellDef="let element">
@@ -41,12 +36,23 @@
         </td>
       </ng-container>
 
-      <!-- Header and Row Declarations -->
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: displayedColumns"
+        [style.background]="getCategoryColor(row.category)"
+      ></tr>
     </table>
+    <mat-paginator
+      [length]="(elementsCount$ | async) ?? 10"
+      [pageSize]="(pageSize$ | async) ?? 5"
+      [pageIndex]="(currentPage$ | async) ?? 0"
+      [pageSizeOptions]="[5, 10, 20]"
+      (page)="onPageChange($event)"
+    >
+    </mat-paginator>
   </ng-container>
-  <!-- Grid na mobile -->
+
   <mat-grid-list
     cols="1"
     rowHeight="200px"
