Add loader when filter

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,7 +13,7 @@ h1 {
 
 .mat-mdc-table {
   border-collapse: separate !important;
-  border-spacing: 0 3px !important; /* pionowe odstępy */
+  border-spacing: 0 3px !important;
   width: 100%;
 }
 
