--- a/src/edit-dialog/edit-dialog.component.html
+++ b/src/edit-dialog/edit-dialog.component.html
@@ -1,30 +1,30 @@
 <div
   [ngStyle]="{
-    'background-color': data.backgroundColor || '#ffffff'
+    background: data.backgroundColor || '#ffffff'
   }"
   class="dialog-container"
 >
   <h2 mat-dialog-title class="dialog-title">Edit Element</h2>
 
   <form [formGroup]="form" mat-dialog-content class="dialog-content">
-    <mat-form-field appearance="fill" class="dialog-field">
+    <mat-form-field appearance="outline" class="dialog-field">
       <mat-label>Name</mat-label>
       <input matInput formControlName="name" />
     </mat-form-field>
 
-    <mat-form-field appearance="fill" class="dialog-field">
+    <mat-form-field appearance="outline" class="dialog-field">
       <mat-label>Weight</mat-label>
       <input matInput type="number" formControlName="weight" />
     </mat-form-field>
 
-    <mat-form-field appearance="fill" class="dialog-field">
+    <mat-form-field appearance="outline" class="dialog-field">
       <mat-label>Symbol</mat-label>
       <input matInput formControlName="symbol" />
     </mat-form-field>
   </form>
 
   <div mat-dialog-actions class="dialog-actions">
-    <button mat-button (click)="cancel()">Cancel</button>
-    <button mat-flat-button color="primary" (click)="save()">Save</button>
+    <button mat-stroked-button (click)="cancel()">Cancel</button>
+    <button mat-stroked-button color="primary" (click)="save()">Save</button>
   </div>
 </div>
