--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,87 +1,100 @@
-<h1>Periodic Table</h1>
-
-<app-filter-input (filterChange)="onFilterChange($event)"></app-filter-input>
+<div class="header-container">
+  <div class="header">
+    <app-react-atom-loader></app-react-atom-loader>
+    <h1>Periodic Table</h1>
+  </div>
+  <div class="input-fiter">
+    <app-filter-input
+      (filterChange)="onFilterChange($event)"
+    ></app-filter-input>
+  </div>
+</div>
 
 <div *ngIf="loading$ | async; else tableTemplate" class="spinner-container">
-  <mat-spinner></mat-spinner>
+  <div class="loader-container">
+    <mat-spinner></mat-spinner>
+  </div>
 </div>
 
 <ng-template #tableTemplate>
   <ng-container *ngIf="pagedElements$ | async as pagedElements">
-    <table mat-table [dataSource]="pagedElements" class="mat-elevation-z8">
-      <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef>Number</th>
-        <td mat-cell *matCellDef="let element">{{ element.position }}</td>
-      </ng-container>
+    <div class="table-container">
+      <table mat-table [dataSource]="pagedElements" class="mat-elevation-z8">
+        <ng-container matColumnDef="position">
+          <th mat-header-cell *matHeaderCellDef>Number</th>
+          <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-      </ng-container>
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef>Weight</th>
-        <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
-      </ng-container>
+        <ng-container matColumnDef="weight">
+          <th mat-header-cell *matHeaderCellDef>Weight</th>
+          <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="symbol">
-        <th mat-header-cell *matHeaderCellDef>Symbol</th>
-        <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
-      </ng-container>
+        <ng-container matColumnDef="symbol">
+          <th mat-header-cell *matHeaderCellDef>Symbol</th>
+          <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>Actions</th>
-        <td mat-cell *matCellDef="let element">
-          <button mat-button (click)="openEditDialog(element)">Edit</button>
-        </td>
-      </ng-container>
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef>Actions</th>
+          <td mat-cell *matCellDef="let element">
+            <div>
+              <button
+                mat-stroked-button
+                color="primary"
+                aria-label="Edytuj"
+                (click)="openEditDialog(element)"
+              >
+                <mat-icon>edit</mat-icon> Edytuj
+              </button>
+            </div>
+          </td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr
-        mat-row
-        *matRowDef="let row; columns: displayedColumns"
-        [style.background]="getCategoryColor(row.category)"
-      ></tr>
-    </table>
-    <mat-paginator
-      [length]="(elementsCount$ | async) ?? 10"
-      [pageSize]="(pageSize$ | async) ?? 5"
-      [pageIndex]="(currentPage$ | async) ?? 0"
-      [pageSizeOptions]="[5, 10, 20]"
-      (page)="onPageChange($event)"
-    >
-    </mat-paginator>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr
+          mat-row
+          *matRowDef="let row; columns: displayedColumns"
+          [style.background]="getCategoryColor(row.category)"
+        ></tr>
+      </table>
+      <mat-paginator
+        [length]="(elementsCount$ | async) ?? 10"
+        [pageSize]="(pageSize$ | async) ?? 5"
+        [pageIndex]="(currentPage$ | async) ?? 0"
+        [pageSizeOptions]="[6, 10, 20]"
+        (page)="onPageChange($event)"
+      >
+      </mat-paginator>
+    </div>
+    <div class="mobile-grid">
+      <mat-grid-list [cols]="getCols()" rowHeight="200px">
+        <mat-grid-tile
+          *ngFor="let element of elements$ | async"
+          [style.background]="getCategoryColor(element.category)"
+          class="element-tile"
+        >
+          <div class="tile-content">
+            <div class="number">{{ element.position }}</div>
+            <div class="symbol">{{ element.symbol }}</div>
+            <div class="name">{{ element.name }}</div>
+            <div class="weight">{{ element.weight }}</div>
+            <button
+              mat-stroked-button
+              color="primary"
+              aria-label="Edytuj"
+              (click)="openEditDialog(element)"
+            >
+              <mat-icon>edit</mat-icon> Edytuj
+            </button>
+          </div>
+        </mat-grid-tile>
+      </mat-grid-list>
+    </div>
   </ng-container>
-
-  <mat-grid-list
-    cols="1"
-    rowHeight="200px"
-    gutterSize="8px"
-    class="mobile-grid"
-  >
-    <mat-grid-tile
-      *ngFor="let element of elements$ | async"
-      [style.background]="getCategoryColor(element.category)"
-      class="element-tile"
-    >
-      <div class="tile-content">
-        <div class="number">{{ element.position }}</div>
-        <div class="symbol">{{ element.symbol }}</div>
-        <div class="name">{{ element.name }}</div>
-        <div class="weight">{{ element.weight }}</div>
-        <button mat-button color="primary" (click)="openEditDialog(element)">
-          Edytuj
-        </button>
-      </div>
-    </mat-grid-tile>
-  </mat-grid-list>
-
-  <app-periodic-table></app-periodic-table>
-
-  <h2>Model atomu sodu (Na)</h2>
-  <app-atom [shells]="[2, 8, 1]"></app-atom>
-
-  <h2>Model atomu węgla (C)</h2>
-  <app-atom [shells]="[2, 4]"></app-atom>
-  <app-react-atom-loader></app-react-atom-loader>
 </ng-template>
