--- a/src/custom-snack-bar/custom-snack-bar.component.scss
+++ b/src/custom-snack-bar/custom-snack-bar.component.scss
@@ -5,7 +5,7 @@
   padding: 12px 16px;
   margin: -16px -16px;
   width: 100%;
-  color: #fff;
+  color: black;
   border-radius: 4px;
   font-size: 14px;
 }
