--- a/src/react-atom-loader/react-atom-loader.component.scss
+++ b/src/react-atom-loader/react-atom-loader.component.scss
@@ -1,9 +1,10 @@
 .loader-container {
-  width: 200px;
-  height: 200px;
+  width: 120px;
+  height: 120px;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0px;
 }
 
 .atom-svg {
